CRUD de Categorías y SubCategorías. Ordenamiento, filtros y validaciones.

--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -26,8 +26,8 @@
         { "areas", "Áreas" },
         { "niveles", "Niveles" },
         { "roles", "Roles" },
-        { "categorías", "Categorías" },
-        { "subcategorías", "SubCategorías" },
+        { "categorias", "Categorías" },
+        { "subcategorias", "Sub Categorías" },
         { "empresa", "Empresa" }
     };
 
